# python-sdk

./: .gitignore  .in  CHANGELOG.md  CONTRIBUTING.md  DEPRECATION.md  LICENSE  README.md  TECH-AND-TEST-README.md  app.py  aws-federation-test.py  interactive-login-logic.py  mkdocs.yml  pyproject.toml  setup.cfg  test.py  tox.ini
.github/workflows/: pypi-publish-on-push-on-new-release.yml  pypi-test-publish-on-push-to-develop-branch.yml
docs/: gen_ref_pages.py
requirements/: common.txt  dev.txt
src/britive/: __init__.py  access_builder.py  accounts.py  api_tokens.py  applications.py  approvals.py  audit_logs.py  britive.py  environment_groups.py  environments.py  exceptions.py  groups.py  identity_attributes.py  identity_providers.py  my_access.py  my_approvals.py  my_requests.py  my_resources.py  my_secrets.py  notification_mediums.py  notifications.py  permissions.py  policies.py  profiles.py  reports.py  requests.py  saml.py  scans.py  secrets_manager.py  security_policies.py  service_identities.py  service_identity_tokens.py  step_up.py  tags.py  task_services.py  tasks.py  users.py  workload.py
src/britive/access_broker/: __init__.py  access_broker.py  brokers.py  permissions.py  pools.py  resource_labels.py  resource_manager.py  resource_permissions.py  resource_types.py  response_templates.py
src/britive/access_broker/profiles/: __init__.py  permissions.py  policies.py  policy_prioritization.py  profiles.py
src/britive/access_broker/resources/: __init__.py  labels.py  permissions.py  resources.py  types.py
src/britive/application_management/: __init__.py  access_builder.py  accounts.py  advanced_settings.py  applications.py  environments.py  groups.py  managed_permissions.py  profiles.py  scans.py
src/britive/application_management/profiles/: __init__.py  additional_settings.py  permissions.py  policies.py  session_attributes.py
src/britive/audit_logs/: __init__.py  logs.py  webhooks.py
src/britive/exceptions/: __init__.py  badrequest.py  generic.py  unauthorized.py
src/britive/federation_providers/: __init__.py  aws.py  aws_sts_jwt.py  azure_system_assigned_managed_identity.py  azure_user_assigned_managed_identity.py  bitbucket.py  federation_provider.py  gcp.py  github.py  gitlab.py  spacelift.py
src/britive/global_settings/: __init__.py  banner.py  firewall.py  notification_mediums.py
src/britive/global_settings/itsm/: __init__.py  connection_metadata.py  connections.py  integrations.py
src/britive/helpers/: __init__.py  custom_attributes.py  federation_providers.py  methods.py  utils.py
src/britive/identity_management/: __init__.py  identity_attributes.py  identity_providers.py  service_identities.py  tags.py  users.py  workload.py
src/britive/reports/: __init__.py  reports.py
src/britive/resource_manager/: labels.py  permissions.py  policy_manager.py  profile_manager.py  resource_manager.py  types.py
src/britive/secrets_manager/: __init__.py  folders.py  policies.py  resources.py  secrets.py  secrets_manager.py  templates.py  vaults.py
src/britive/security/: __init__.py  active_sessions.py  api_tokens.py  policies.py  saml.py
src/britive/settings/: banner.py  settings.py
src/britive/system/: __init__.py  actions.py  consumers.py  permissions.py  policies.py  roles.py  system.py
src/britive/workflows/: __init__.py  notifications.py  tasks.py
tests/: 000-global_settings-01-identity_attributes.py  000-global_settings-02-notification_mediums.py  000-global_settings-03-banner.py  100-identity_management-01-users.py  100-identity_management-02-tags.py  100-identity_management-03-service_identities.py  100-identity_management-04-service_identity_tokens.py  100-identity_management-05-identity_providers.py  100-identity_management-06-workload.py  150-secrets_manager-01-secrets_manager.py  200-application_management-01-applications.py  200-application_management-02-environment_groups.py  200-application_management-03-environments.py  200-application_management-04-scans.py  200-application_management-05-accounts.py  200-application_management-06-permissions.py  200-application_management-07-groups.py  200-application_management-08-profiles.py  250-system-01-policies.py  250-system-02-actions.py  250-system-03-consumers.py  250-system-04-roles.py  250-system-05-permissions.py  300-workflows-01-task_services.py  300-workflows-02-tasks.py  300-workflows-03-notifications.py  350-access_broker-01-response_templates.py  350-access_broker-03-resource_labels.py  350-access_broker-07-profiles_policies.py  350-access_broker-08-permissions.py  400-security-01-policies.py  400-security-02-saml.py  500-audit_logs-01-logs.py  500-audit_logs-02-webhooks.py  600-britive-01-my_access.py  600-britive-03-my_requests.py  600-britive-04-my_approvals.py  999-cleanup-01-delete_all_resources.py  __init__.py  cache.py  (+52 more)
