[metadata]
name = britive
version = 2.11.1
author = Britive Inc.
author_email = support@britive.com
description = A pure Python SDK for the Britive API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.britive.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests

[options.packages.find]
where = src